@@ -83,6 +83,9 @@ were using these in your apps then please join wxPython-dev and assist
 with a more modern reimplementation.</p>
 <p>Added a new version (0.8.3) of FloatCanvas from Chris Barker.  It's now
 in a subpackage of wx.lib.</p>
+<p>It is now possible to change the tab traversal order of controls on a
+panel or dialog.  For details see the new MoveAfterInTabOrder and
+MoveBeforeInTabOrder methods of wx.Window.</p>
 </div>
 <div class="section" id="id2">
 <h1><a name="id2">2.5.1.5</a></h1>
